Fix rows on safari

--- a/plugin/YouPHPFlix2/view/css/style.css
+++ b/plugin/YouPHPFlix2/view/css/style.css
@@ -398,5 +398,5 @@ body.fullscreen{
 }
 
 .rowSerie{
-    display: inline-block;
+    display: inline-table;
 }
